--- a/Forgot_password/index.html
+++ b/Forgot_password/index.html
@@ -221,7 +221,7 @@
                 <p class="success-message" id="resetSuccess"></p>
             </form>
             
-            <a href="http://98.80.67.100:9038/">Back to Sign In</a>
+            <a href="../Login/index.html">Back to Sign In</a>
         </div>
     </div>
 
@@ -365,7 +365,7 @@
                 
                 if (isValid) {
                     try {
-                        const response = await fetch('http://localhost:3000/api/forgot-password', {
+                        const response = await fetch('http://127.0.0.1:5500/api/forgot-password', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
