--- a/Login/index.html
+++ b/Login/index.html
@@ -165,107 +165,106 @@
 </head>
 
 
-  <body>
-      <div id="login-page" class="login-container">
-          <header class="login-header">
-              <div>
-                  <h1>Login System</h1>
-                  <p>"Secure authentication with email and password"</p>
-              </div>
-          </header>
-          <div class="background-half"></div>
-          <div class="signin-half">
-              <div class="signin-container">
-                  <h2>Sign In</h2>
-                  <form id="signin-form">
-                      <label for="email"><i class="fas fa-envelope"></i> Email</label>
-                      <input type="email" id="email" name="email" placeholder="Enter your email" required maxlength="100">
-                      <p class="error-message" id="email-error"></p>
+<body>
+  <div id="login-page" class="login-container">
+      <header class="login-header">
+          <div>
+              <h1>Login System</h1>
+              <p>"Secure authentication with email and password"</p>
+          </div>
+      </header>
+      <div class="background-half"></div>
+      <div class="signin-half">
+          <div class="signin-container">
+              <h2>Sign In</h2>
+              <form id="signin-form">
+                  <label for="email"><i class="fas fa-envelope"></i> Email</label>
+                  <input type="email" id="email" name="email" placeholder="Enter your email" required maxlength="100">
+                  <p class="error-message" id="email-error"></p>
 
-                      <label for="password"><i class="fas fa-lock"></i> Password</label>
-                      <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                      <p class="error-message" id="password-error"></p>
+                  <label for="password"><i class="fas fa-lock"></i> Password</label>
+                  <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                  <p class="error-message" id="password-error"></p>
 
-                      <div class="options-container">
-                          <div class="remember-me">
-                              <input type="checkbox" id="remember" name="remember">
-                              <label for="remember">Remember Me</label>
-                          </div>
-                          <a href="../Forgot/index.html">Forgot Password?</a>
+                  <div class="options-container">
+                      <div class="remember-me">
+                          <input type="checkbox" id="remember" name="remember">
+                          <label for="remember">Remember Me</label>
                       </div>
+                      <a href="../Forgot_password/index.html">Forgot Password?</a>
+                  </div>
 
-                      <button type="submit">Sign In</button>
-                  </form>
+                  <button type="submit">Sign In</button>
+              </form>
 
-                  <p style="text-align: center;">Don't have an account? <a href="../Sign/index.html">Sign Up</a></p>
-              </div>
+              <p style="text-align: center;">Don't have an account? <a href="../Sign/index.html">Sign Up</a></p>
           </div>
       </div>
+  </div>
 
-      <script>
-          document.addEventListener('DOMContentLoaded', function () {
-              const form = document.getElementById('signin-form');
-              const emailInput = document.getElementById('email');
-              const passwordInput = document.getElementById('password');
-              const rememberMeInput = document.getElementById('remember');
-              const emailError = document.getElementById('email-error');
-              const passwordError = document.getElementById('password-error');
+  <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          const form = document.getElementById('signin-form');
+          const emailInput = document.getElementById('email');
+          const passwordInput = document.getElementById('password');
+          const rememberMeInput = document.getElementById('remember');
+          const emailError = document.getElementById('email-error');
+          const passwordError = document.getElementById('password-error');
 
-              emailInput.addEventListener('input', function () {
-                  emailError.textContent = validateEmail();
-              });
+          emailInput.addEventListener('input', function () {
+              emailError.textContent = validateEmail();
+          });
 
-              passwordInput.addEventListener('input', function () {
-                  passwordError.textContent = validatePassword();
-              });
+          passwordInput.addEventListener('input', function () {
+              passwordError.textContent = validatePassword();
+          });
 
-              form.addEventListener('submit', async function (event) {
-                  event.preventDefault();
+          form.addEventListener('submit', async function (event) {
+              event.preventDefault();
 
-                  try {
-                      const response = await fetch('http://localhost:3000/api/login', {
-                          method: 'POST',
-                          headers: { 'Content-Type': 'application/json' },
-                          credentials: 'include',
-                          body: JSON.stringify({
-                              email: emailInput.value.trim(),
-                              password: passwordInput.value,
-                              rememberMe: rememberMeInput.checked
-                          })
-                      });
+              try {
+                  const response = await fetch('http://127.0.0.1:5500/api/login', {
+                      method: 'POST',
+                      headers: { 'Content-Type': 'application/json' },
+                      credentials: 'include',
+                      body: JSON.stringify({
+                          email: emailInput.value.trim(),
+                          password: passwordInput.value,
+                          rememberMe: rememberMeInput.checked
+                      })
+                  });
 
-                      const result = await response.json();
+                  const result = await response.json();
 
-                      if (!response.ok) {
-                          throw new Error(result.error || 'Login failed');
-                      }                      
+                  if (!response.ok) {
+                      throw new Error(result.error || 'Login failed');
+                  }                      
 
-                      console.log('Login successful, redirecting to dashboard');
-                      window.location.href = 'http://localhost:3000/dashboard'; 
-                  } catch (error) {
-                      console.error('Login error:', error);
-                      alert(error.message);
-                  }
-              });
-
-              function validateEmail() {
-                  const email = emailInput.value.trim();
-                  const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-                  if (!emailPattern.test(email)) {
-                      return 'Please enter a valid email address.';
-                  }
-                  return '';
-              }
-
-              function validatePassword() {
-                  const password = passwordInput.value;
-                  if (password.length < 8) {
-                      return 'Password must be at least 8 characters long.';
-                  }
-                  return '';
+                  console.log('Login successful, redirecting to dashboard');
+                  window.location.href = 'http://127.0.0.1:5500/dashboard'; 
+              } catch (error) {
+                  console.error('Login error:', error);
+                  alert(error.message);
               }
           });
-      </script>
-  </body>
 
+          function validateEmail() {
+              const email = emailInput.value.trim();
+              const emailPattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+              if (!emailPattern.test(email)) {
+                  return 'Please enter a valid email address.';
+              }
+              return '';
+          }
+
+          function validatePassword() {
+              const password = passwordInput.value;
+              if (password.length < 8) {
+                  return 'Password must be at least 8 characters long.';
+              }
+              return '';
+          }
+      });
+  </script>
+</body>
 </html>
