--- a/Sign/index.html
+++ b/Sign/index.html
@@ -173,7 +173,8 @@
                 <button type="submit">Sign Up</button>
             </form>
 
-            <a href="../Login/index.html">Already have an account? Sign In</a>
+            <a href="window.location.href = 'http://13.49.67.176:8767/index.html';
+">Already have an account? Sign In</a>
         </div>
     </div>
 
