--- a/Sign/index.html
+++ b/Sign/index.html
@@ -173,8 +173,7 @@
                 <button type="submit">Sign Up</button>
             </form>
 
-            <a href="window.location.href = 'http://13.49.67.176:8767/index.html';
-">Already have an account? Sign In</a>
+            <a href="http://13.49.67.176:8767/index.html">Already have an account? Sign In</a>
         </div>
     </div>
 
@@ -293,7 +292,8 @@
                 alert('Signup successful! Redirecting to Login page...');
                 
                 // Redirect to login page after successful signup
-                window.location.href = '../Login/index.html';
+                window.location.href = 'http://13.49.67.176:8767/index.html';
+
                 
             } catch (error) {
                 console.error('Signup request failed:', error);
